lib_LIBRARIES = libcplot.a

libcplot_a_SOURCES = \
    areachart.cc \
    areachart.h \
    axisdefinition.cc \
    axisdefinition.h \
    barchart.cc \
    barchart.h \
    canvas.cc \
    canvas.h \
    colorpalette.h \
    continuousdomain.h \
    discretedomain.h \
    domain.cc \
    domain.h \
    domainprovider.cc \
    domainprovider.h \
    domainprovider_impl.h \
    drawable.cc \
    drawable.h \
    griddefinition.cc \
    griddefinition.h \
    legenddefinition.cc \
    legenddefinition.h \
    libcplot.h \
    linechart.cc \
    linechart.h \
    pointchart.cc \
    pointchart.h \
    rendertarget.h \
    series.cc \
    series.h \
    seriesjoin.h \
    styles/style_default.h \
    svgtarget.h \
    timedomain.cc \
    timedomain.h \
    viewport.h
